--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,12 @@
-html { 
-  background: url(../images/NYCSKY.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
+html 
+	{ 
+	  background: url(../images/NYCSKY.jpg) no-repeat center center fixed; 
+	  -webkit-background-size: cover;
+	  -moz-background-size: cover;
+	  -o-background-size: cover;
+	  background-size: cover;
+	}
+
+h1{
+	
+  }	
