--- a/css/main.css
+++ b/css/main.css
@@ -11,13 +11,42 @@ h1
 	{
 	text-align: center;
 	font-family: Bodoni MT;
-	font-size: 400px;
+	font-size: 250px;
 	opacity: 0.75;
 	filter: Alpha(opacity=50);
-	padding: 1cm; 
+	padding: 10px;
+	padding-top: 0px;  
 	}	
 
-.me
+body
+	
 	{
-	display: block;	
+	text-align: center;
+	border-radius: 10px;	
+	}
+
+p
+	{
+	font-family: Bodoni MT;
+	font-size: 100px;
+	opacity: 0.90;
+	filter: Alpha(opacity=50);
+	padding: 10px;
+	padding-top: 0px;   
 	}	
+
+input {
+          border:0;
+          padding:10px;
+          font-size: 18px;
+          font-family: Bodoni MT;
+          
+        }
+        input[type="submit"]
+        {
+          background: red;
+          color:white;
+        }
+
+
+
