--- a/Stop Light/css/main.css
+++ b/Stop Light/css/main.css
@@ -22,7 +22,7 @@ body
 .buttons
 		  
 		  {
-		  background-color: black;
+		  background-color: white;
 		  width: 250px;
 		  height: 490px;
 		  padding-left: 10px;
